syntax = "proto3";

option go_package = "xmirrror.cn/iast/goat/rpc";
option java_multiple_files = true;

package rpc;

// messages
message GoatRequest {
    string input = 1;
    string cmd = 2;
}

message GoatResponse {
    string content = 1;
}

service GoatService {
    rpc SampleUnary (GoatRequest) returns (GoatResponse) {}
    rpc SampleStream (stream GoatRequest) returns (stream GoatResponse) {}
}

message Request {
    int32 client_id = 1;
    string request_data = 2;
}

message Response {
    int32 server_id = 1;
    string response_data = 2;
}

service gRPCDemo {
    rpc SimpleMethod(Request) returns (Response);
}